Properly handle "open with" in MacOS by using java.awt.desktop
Bump to Java 9, or we can't use java.awt.desktop at all